testing/tests/ui/cycle.stderr
error: cyclic dependency in graph [
           "\"cycle2.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle2.html/") --> \"cycle1.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle1.html/")",
           "\"cycle1.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle1.html/") --> \"cycle1.html\" (absolute path: \"$WORKSPACE/target/tests/trybuild/askama_testing/templates/cycle1.html/")",
       ]
 --> tests/ui/cycle.rs:4:19
  |
4 | #[template(path = "cycle2.html")]
  |                   ^^^^^^^^^^^^^
